...
        </menu>

    </item>

    <item
        android:id="@+id/navTeam"
        android:title="Team"
        app:showAsAction="never">

        // a sub menu
        <menu>
            <item
                android:id="@+id/navTeamSelect"
                android:title="Select Team" />
            <item
                android:id="@+id/navTeamCreate"
                android:title="Create Team" />
        </menu>

    </item>

</menu>
