...
        android:textSize="24sp"
        android:text="@string/sign_into_your_account"
        android:fontFamily="@font/montserrat"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/EditTextLoginEmail"/>

    <EditText
        android:id="@+id/EditTextLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_or_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/roboto_regular"
        android:layout_above="@id/EditTextLoginPassword"
        android:background="@drawable/rounded_edittext"
        android:textSize="15sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditTextLoginPassword"
...
                android:text="@string/remember_me" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ConstraintLayoutForSwitch"
        android:background="@drawable/rounded_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
...
