<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintBottom_toBottomOf="parent"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    // made with help of the video "How to Add a Toolbar - Android Studio Tutorial" by Coding in
    Flow
</androidx.appcompat.widget.Toolbar>